--- a/README
+++ b/README
@@ -1,1 +1,12 @@
+This is the Ultimate- C - ++ file it contains all the code Provided by Programming with mosh
+with example and Comment by Poojan Kumar maharjan
 
+
+
+Tools required
+
+MS Visual studio (code editor)
+https://visualstudio.microsoft.com/vs/community/
+
+
+Time required Less then an hour.
