--- a/README
+++ b/README
@@ -10,3 +10,9 @@ https://visualstudio.microsoft.com/vs/community/
 
 
 Time required Less then an hour.
+
+If you have any question be sure to message me at
+
+1) Instagram == https://www.instagram.com/poojankumarmaharjan/
+2) Facebook == https://www.facebook.com/PoojanKumarMaharjan/
+3) Discord == poojankumar_37345
