--- a/README
+++ b/README
@@ -1,18 +1,28 @@
-This is the Ultimate- C - ++ file it contains all the code Provided by Programming with mosh
-with example and Comment by Poojan Kumar maharjan
+Here's a stylized version of your text:
 
+---
 
+**Ultimate C++ File**
 
-Tools required
+Containing all the code provided by Programming with Mosh, with examples and comments by Poojan Kumar Maharjan.
 
-MS Visual studio (code editor)
-https://visualstudio.microsoft.com/vs/community/
+**Tools Required**
 
+- MS Visual Studio (code editor)
+  [Download Visual Studio](https://visualstudio.microsoft.com/vs/community/)
 
-Time required Less then an hour.
+**Time Required**
 
-If you have any question be sure to message me at
+Less than an hour.
 
-1) Instagram == https://www.instagram.com/poojankumarmaharjan/
-2) Facebook == https://www.facebook.com/PoojanKumarMaharjan/
-3) Discord == poojankumar_37345
+**Contact Information**
+
+If you have any questions, feel free to reach out to me:
+
+- Instagram: [poojankumarmaharjan](https://www.instagram.com/poojankumarmaharjan/)
+- Facebook: [PoojanKumarMaharjan](https://www.facebook.com/PoojanKumarMaharjan/)
+- Discord: poojankumar_37345
+
+---
+
+Feel free to adjust the formatting or let me know if you need further modifications!
