--- a/README
+++ b/README
@@ -1,21 +1,21 @@
-Here's a stylized version of your text:
+Certainly! Here's the text with some different emojis added:
 
 ---
 
-**Ultimate C++ File**
+🚀 **Ultimate C++ File** 📝
 
 Containing all the code provided by Programming with Mosh, with examples and comments by Poojan Kumar Maharjan.
 
-**Tools Required**
+**Tools Required** 🛠️
 
 - MS Visual Studio (code editor)
   [Download Visual Studio](https://visualstudio.microsoft.com/vs/community/)
 
-**Time Required**
+**Time Required** ⏰
 
 Less than an hour.
 
-**Contact Information**
+**Contact Information** 📲
 
 If you have any questions, feel free to reach out to me:
 
@@ -25,4 +25,4 @@ If you have any questions, feel free to reach out to me:
 
 ---
 
-Feel free to adjust the formatting or let me know if you need further modifications!
+Feel free to let me know if you need further adjustments!
