--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Certainly! Here's the text with some different emojis added:
-
+Every file contains Great examples with comment to learn
 ---
 
 🚀 **Ultimate C++ File** 📝
