--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Certainly! Here's the text with some different emojis added:
-Every file contains Great examples with comment to learn
+Every file contains Great examples with comment to learn start from 1st copy the code to your browser
 ---
 
 🚀 **Ultimate C++ File** 📝
